force-app/main/default/objects/Structure__c/fields/Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Age_Years__c</fullName>
    <label>Age (Years)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <formula>IF(NOT(ISBLANK(Install_Date__c)), FLOOR((TODAY() - Install_Date__c) / 365), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>