force-app/main/default/objects/Structure__c/fields/Inspection_Type_Required__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type_Required__c</fullName>
    <label>Inspection Type Required</label>
    <type>Text</type>
    <formula>IF(Road_Accessible__c, "Ground", "Aerial")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>