force-app/main/default/objects/Structure__c/fields/Road_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Road_Accessible__c</fullName>
    <label>Road Accessible</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates if this structure can be accessed by road for ground inspection. If false, aerial inspection is required.</description>
</CustomField>